# Bicycle-JIT-AOT-Compiler

./: .gitignore  CMakeLists.txt  README.md  flake.nix
.github/workflows/: ci.yaml
cmake/: defaults.cmake
include/bjac/IR/: argument_instruction.hpp  basic_block.hpp  binary_operator.hpp  bounds_check.hpp  branch_instruction.hpp  call_instruction.hpp  constant_instruction.hpp  function.hpp  icmp_instruction.hpp  instruction.hpp  instructions.def  load_instruction.hpp  null_check.hpp  phi_instruction.hpp  ret_instruction.hpp  type.hpp  value.hpp
include/bjac/analysis/: lifetime.hpp  liveness.hpp  reg_alloc.hpp
include/bjac/graphs/: dfs.hpp  dominator_tree.hpp  graph_traits.hpp  inverse_graph_adaptor.hpp  linear_order.hpp  loop.hpp  loop_tree.hpp
include/bjac/transforms/: check_elimination.hpp  constant_folding.hpp  dce.hpp  pass.hpp  peepholes.hpp
include/bjac/utils/: ilist.hpp  ilist_iterator.hpp  ilist_node.hpp
lib/IR/: basic_block.cpp  function.cpp  instruction.cpp
lib/analysis/: liveness.cpp  reg_alloc.cpp
lib/transforms/: check_elimination.cpp  constant_folding.cpp  dce.cpp  peepholes.cpp
src/: main.cpp
src/IR/: basic_block.cpp  function.cpp  instruction.cpp
test/: CMakeLists.txt
test/IR/: CMakeLists.txt
test/IR/src/: fibonacci.cpp  function.cpp
test/analysis/: CMakeLists.txt
test/analysis/src/: lifetime.cpp  liveness.cpp  reg_alloc.cpp
test/graphs/: CMakeLists.txt
test/graphs/include/: common.hpp
test/graphs/src/: dominator_tree.cpp  linear_order.cpp  loop_tree.cpp
test/include/test/: common.hpp
test/transforms/: CMakeLists.txt
test/transforms/src/: check_elimination.cpp  constant_folding.cpp  peepholes.cpp
test/utils/: CMakeLists.txt
test/utils/ilist/src/: ilist.cpp
